@@ -1,7 +1,11 @@
 == Version 2.7.2 Work in progress (not released -- this is a draft) ==
 
+  TODO: compile .po (creme_core)
+
   Users side :
   ------------
+    # You can now see the detail-view of a public EntityFilter which belongs to another user.
+      It fixes some issues for Reports with filters too.
     # Apps :
         * Emails :
             - When an EntityEmail is created from the related emails' Brick ("Emails history")
